# image-search-engine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
script/: run_celery.sh  run_server.sh  run_worker.sh  setup.sh
services/celery/: app.py  tasks.py  worker.py
services/postgre/: connection.py  model.py  models.py
src/: exceptions.py  main.py  secret.py
src/routers/: health_check.py
src/routers/encoders/: encoder_init.py  encoder_status.py  initialize_encoder.py  monitor_encoder.py
src/schema/: request_format.py  response.py
utils/: database.py  encoder.py  helper.py  logger.py  model.py
