[tool.poetry]
name = "image-search-engine"
version = "0.1.0"
description = "PoC for image search engine service utilizing sentence-transformers."
authors = ["armananta <armanantabastian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.1"
sentence-transformers = "^3.3.1"
ruff = "^0.8.0"
pre-commit = "^4.0.1"
celery = "^5.4.0"
asyncpg = "^0.30.0"
sqlmodel = "^0.0.22"
itsdangerous = "^2.2.0"
psycopg2-binary = "^2.9.10"
petname = "^2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
